# RocketAndAsteroids

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  cpp.yml
src/: ecs.h  main.cpp
src/component/: actor_component.h  component_container.h  components.h  input_component.h  particle_component.h  position_component.h  rectangle_component.h  shape_component.h  sprite_component.h
src/entity/: entity.h
src/system/: collision_system.h  game_logic_system.h  graphics_system.h  input_system.h  system.h  systems.h
src/util/: noncopyable.h
src/world/: world.cpp  world.h
test/: entity_test.cpp  world_test.cpp
test/implementation/: graphics.h
test/system/: collision_system_test.cpp  game_logic_system_test.cpp  graphics_system_test.cpp  input_system_test.cpp
